# recipe-gannt

./: .gitignore  AGENTS.md  CLAUDE.md
.github/workflows/: ci.yml
back/: .env.example  .gitignore  Makefile  alembic.ini  app.py  database.py  docker-compose.yml  environment.py  history.py  logic.py  main.py  models.py  pyproject.toml  render.yaml  repository.py  requirements.txt
back/alembic/: env.py
back/alembic/versions/: a1b2c3d4e5f6_create_recipe_history.py  b8f5a6c7d8e9_drop_app_metadata_table.py  dfb5cadcd953_create_test_table.py
back/src/: __init__.py  app.py
back/src/config/: __init__.py  environment.py
back/src/db/: __init__.py  database.py  models.py  repository.py
back/src/services/: __init__.py  ai_service.py  graph.py  schemas.py  scraping.py  search.py  url_safety.py
back/tests/: conftest.py  test_api.py  test_graph.py  test_history.py  test_logic.py  test_repository.py  test_scraping.py  test_search.py  test_url_safety.py
front/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  render.yaml  tsconfig.json
front/src/__tests__/: I18nProvider.test.tsx  LoadingState.test.tsx  RecipeCard.test.tsx  RecipeView.test.tsx  SearchInterface.test.tsx  sample.test.tsx
front/src/__tests__/hooks/: useRecipeState.test.ts  useTimerState.test.ts
front/src/app/: globals.css  layout.js  layout.tsx  page.js  page.module.css  page.tsx
front/src/components/: ChecklistView.tsx  LanguageSwitcher.tsx  LoadingState.tsx  RecipeCard.tsx  RecipeGraph.tsx  RecipeView.tsx  SearchInput.tsx  SearchInterface.tsx  StepItem.tsx  StepSection.tsx  TimerControls.tsx  index.ts
front/src/hooks/: useRecipeState.ts  useTimerState.ts
front/src/i18n/: I18nProvider.tsx  index.ts  translations.ts
front/src/services/: api.ts
front/src/types/: index.ts
