[project]
name = "recipe-gantt-backend"
version = "0.1.0"
description = "Backend for Recipe Gantt application"
requires-python = ">=3.11"
dependencies = [
    "plotly",
    "pandas",
    "openai",
    "requests",
    "pydantic>=2.0",
    "beautifulsoup4",
    "fastapi",
    "python-dotenv",
    "kaleido",
    "uvicorn[standard]",
    "ddgs",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest>=8.0",
    "httpx>=0.27.0",
    "respx>=0.21",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
