[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "recipe-gantt-backend"
version = "0.1.0"
description = "Backend for Recipe Gantt application"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "requests",
    "pydantic>=2.0",
    "beautifulsoup4",
    "fastapi",
    "python-dotenv",
    "uvicorn[standard]",
    "ddgs",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27.0",
    "respx>=0.21",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (needed for FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Unused arguments are common in test fixtures
"src/app.py" = ["ARG001"]  # request parameter required by slowapi rate limiter
"alembic/env.py" = ["E402"]  # imports after load_dotenv() is intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
